More correct spacing between "Please login..." and cover

--- a/article/nodes/text/text.css
+++ b/article/nodes/text/text.css
@@ -17,5 +17,8 @@
 /* for top login standalone text */
 .document .surface.content .nodes > .content-node.text {
   padding-bottom: 0;
-  margin-bottom: -15px;
+}
+
+.document .surface.content .nodes > .content-node.text ~ .content-node.cover {
+	padding-top: 5px;
 }
